# WS

./: .gitignore  CMakeLists.txt
graphical_api/: CMakeLists.txt
graphical_api/cmake/: utils.cmake
graphical_api/shader/: BasicColorShader.fs  BasicColorShader.vs  CoordinateSystemShader.fs  CoordinateSystemShader.vs  LightCasters.fs  LightingMaps.fs  Meterials.fs  Meterials.vs  Meterials_LightCube.vs  MultipleLights.fs  Spotlight.fs  TextureShader.fs  TextureShader.vs  TransformShader.fs  TransformShader.vs  shader.fs  shader.vs
graphical_api/source/: CMakeLists.txt
graphical_api/source/OpenGL/: CMakeLists.txt
graphical_api/source/OpenGL/01_HelloWindow/: CMakeLists.txt  main.cpp
graphical_api/source/OpenGL/02_HelloTriangle/: CMakeLists.txt  main.cpp
graphical_api/source/OpenGL/03_Shader/: CMakeLists.txt  main.cpp  shader.h
graphical_api/source/OpenGL/04_Textures/: CMakeLists.txt  main.cpp  shader.cpp
graphical_api/source/OpenGL/05_Transform/: CMakeLists.txt  main.cpp
graphical_api/source/OpenGL/06_CoordinateSystem/: CMakeLists.txt  main.cpp  shader.cpp  shader.h
graphical_api/source/OpenGL/07_Camera/: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
graphical_api/source/OpenGL/08_Color/: CMakeLists.txt  main.cpp
graphical_api/source/OpenGL/09_BasicLighting/: CMakeLists.txt  main.cpp
graphical_api/source/OpenGL/10_Materials/: CMakeLists.txt  main.cpp  shader.cpp
graphical_api/source/OpenGL/11_LightingMaps/: CMakeLists.txt  camera.h  main.cpp  shader.h
graphical_api/source/OpenGL/12_LightCasters/: CMakeLists.txt  main.cpp
graphical_api/source/OpenGL/13_Spotlight/: CMakeLists.txt  main.cpp
graphical_api/source/OpenGL/14_MultipleLights/: CMakeLists.txt  main.cpp
graphical_api/source/OpenGL/15_Assimp/: CMakeLists.txt  camera.cpp  main.cpp
graphical_api/source/OpenGL/16_Model/: CMakeLists.txt  Mesh.cpp  Model.cpp  Model.h  main.cpp
graphical_api/source/OpenGL/17_DepthTest/: CMakeLists.txt  Model.cpp  main.cpp
graphical_api/source/OpenGL/18_StencilTest/: CMakeLists.txt  Mesh.h  Model.h  main.cpp
mini_engine/: CMakeLists.txt
mini_engine/source/: CMakeLists.txt
mini_engine/source/base/: Allocator.cpp  Allocator.h  CMakeLists.txt  JobSystem.cpp  JobSystem.h  MEAllocator.cpp  MEAllocator.h  MEJobSystem.cpp  MEJobSystem.h  MEObject.cpp  MEObject.h  MEPrefix.cpp  MEPrefix.h  MESpinLock.cpp  MESpinLock.h  MEWorkStealingDequeue.cpp  MEWorkStealingDequeue.h  Object.cpp  Object.h  Prefix.cpp  Prefix.h  SpinLock.h  TMatHeaders.h  TVecHelpers.h  WorkStealingDequeue.cpp  WorkStealingDequeue.h  mat2.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
mini_engine/source/core/: CMakeLists.txt
mini_engine/source/data/: CMakeLists.txt  MEObject.h
mini_engine/source/demo/: CMakeLists.txt  main.cpp
mini_engine/source/render/: CMakeLists.txt  MERenderBase.cpp  MERenderBase.h  MERenderBuffer.cpp  MERenderBuffer.h  MERenderContext.cpp  MERenderContext.h  MERenderDeviceContext.cpp  MERenderDeviceContext.h  MERenderDeviceContextOpenGL.cpp  MERenderDeviceContextOpenGL.h  MERenderPlatformDeviceContextOpenGL.cpp  MERenderPlatformDeviceContextOpenGL.h  MERenderPlatform_macos.cpp  MERenderPlatform_macos.h  MERenderResource.cpp  MERenderResource.h  RenderBase.cpp  RenderBase.h  RenderBuffer.cpp  RenderBuffer.h  RenderContext.h  RenderDeviceContext.cpp  RenderDeviceContext.h  RenderDeviceContextOpenGL.cpp  RenderDeviceContextOpenGL.h  RenderPlatformDeviceContextOpenGL.cpp  RenderPlatformDeviceContextOpenGL.h  RenderPlatform_macos.cpp  RenderPlatform_macos.h  RenderResource.cpp  RenderResource.h
mini_engine/source/render/opengl/: MERenderUtilOpenGL.cpp  MERenderUtilOpenGL.cpp.mm  MERenderUtilOpenGL.h  RenderUtilOpenGL.cpp  RenderUtilOpenGL.h
mo_engine/: CMakeLists.txt
mo_engine/configs/deployment/: LearnOpenGL.ini
mo_engine/configs/development/: LearnOpenGL.ini
mo_engine/shader/: CMakeLists.txt
(+5 files in other folders)
