set(TARGET_NAME OpenGL)

add_subdirectory(01_HelloWindow)
add_subdirectory(02_HelloTriangle)
add_subdirectory(03_Shader)
add_subdirectory(04_Textures)
add_subdirectory(05_Transform)
add_subdirectory(06_CoordinateSystem)
add_subdirectory(07_Camera)
add_subdirectory(08_Color)
add_subdirectory(09_BasicLighting)
add_subdirectory(10_Materials)
add_subdirectory(11_LightingMaps)
add_subdirectory(12_LightCasters)
add_subdirectory(13_Spotlight)
add_subdirectory(14_MultipleLights)
add_subdirectory(15_Assimp)
add_subdirectory(16_Model)
add_subdirectory(17_DepthTest)
add_subdirectory(18_StencilTest)